--- a/.gitignore
+++ b/.gitignore
@@ -177,4 +177,18 @@ dmypy.json
 # Ignore all local history of files
 .history
 
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+pyvenv.cfg
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-selfcheck.json
+
 # End of https://www.gitignore.io/api/django,python,visualstudiocode
