--- a/locales_project/requirements.txt
+++ b/locales_project/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.7
 Django==3.0.5
 django-cors-headers==3.2.1
+django-filter==2.2.0
 django-filters==0.2.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
